# mem-pattern-recognition

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  debug_mcf.sh  make_trace.sh  make_trace2.sh  run_app.sh  run_app_with_roi.sh  run_apps.sh  run_binary.sh  run_mcf.sh  run_spec.sh  run_spec_with_roi.sh  trace_mcf.sh
include/: circular_buffer.hpp  conf_counter.h  instruction.h  macro.h  pattern.h  pattern_list.h  pc_meta.h  trace_list.h  tracereader.h
include/perf-parse/: perf-parse-common.h  perf-parse-cycle.h  perf-parse-miss.h
include/utils/: LRUqueue.h  MCMF.h  macro.h  miss_info.h  monoQueue.h  trans_abs_path.h
new_bench/: bench.sh  calc_cluster.cpp  chosen_parse.py  cluster.ipynb  cluster.py  getstat.sh  paint.ipynb  pick.ipynb  postprocess.ipynb  postprocess.py  run.sh
result/: parse.cpp  parse.sh
scripts/: analyze_roi.sh  run_app.sh  run_app_with_roi.sh  run_app_without_roi.sh  run_apps.sh  run_binary.sh  run_spec.sh  run_spec_with_roi.sh  test_trace.sh
src/: main.cpp  pattern_list.cpp  pc_meta.cpp  trace_list.cpp  tracereader.cpp
src/utils/: analyze-gem5-missinfo.cpp  analyze-gem5-prefetch.cpp  analyze-other.cpp  choose_ckp.cpp  macro.cpp  merge-result.cpp  parse-merged-result.cpp  pattern2line.cpp  pattren2line.cpp  perf-parse.cpp
test-cases/chain/: chain.c
test-cases/combine/: combine.cpp
test-cases/indirect/: indirect.c
test-cases/pointera/: pointera.c
test-cases/pointerb/: pointerb.c
test-cases/stride/: stride.c
test-cases/struct_pointer/: struct_pointer.c
tracer/: clean_tracer.sh  make_no_tracer.sh  make_only_tracer.sh  make_roi_tracer.sh  make_test_tracer.sh  make_tracer.sh  make_union_tracer.sh  mpr_tracer.cpp  mpr_tracer_v2.cpp  mpr_tracer_v3.cpp  no_tracer.cpp  only_tracer.cpp  test_tracer.cpp  union_tracer.cpp  union_tracer_with_roi.cpp
